--- a/main.css
+++ b/main.css
@@ -1,3 +1,38 @@
 body {
   background-color: goldenrod;
 }
+
+h1 {
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 30px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.btn {
+  
+  background-color: darkolivegreen;
+  margin: 10px;
+  padding: 10px;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  width: 650px;
+  height: 650px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  text-align: center;
+
+}
